added swagger for water endpoints
