# controllers/waterTrack/updateWaterById.js
@@ -13,7 +13,7 @@ const updateWaterById = async (req, res) => {
     waterTrack
   );
   if (!result) {
-    throw HttpError(404, `Water track with id = ${waterId} is found`);
+    throw HttpError(404, `Water track with id = ${waterId} is not found`);
   }
   res.json(result);
 };
